--- a/SD - 11. Fitness Events/fitness-turnstile/build.gradle
+++ b/SD - 11. Fitness Events/fitness-turnstile/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -18,7 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        mavenLocal()
     }
 }
 
