--- a/SD - 11. Fitness Events/fitness-common/requests.yml
+++ b/SD - 11. Fitness Events/fitness-common/requests.yml
@@ -3,7 +3,7 @@
 create-new-ticket:          INSERT 
                             INTO `events` (`object_class`, `object_id`, `property_name`, 
                                            `property_action`)
-                            VALUES ('ticket', '%d', 'ticket', 'create');
+                            VALUES ('ticket', '%d', 'seasonticket', 'create');
 
 # Query template to add secret identifier of Season Ticket    
 # Used by method SeasonTicketService.createTicket ()                      
@@ -15,7 +15,7 @@ set-secret-to-ticket:       INSERT
 set-client-to-ticket:       INSERT
                             INTO `events` (`object_class`, `object_id`, `property_name`, 
                                            `property_action`, `property_value`)
-                            VALUES ('ticket', '%d', 'client', 'set', '%d');
+                            VALUES ('ticket', '%d', 'fitnessclient', 'set', '%d');
                             
 change-visits-of-ticket:    INSERT
                             INTO `events` (`object_class`, `object_id`, `property_name`, 
@@ -25,16 +25,15 @@ change-visits-of-ticket:    INSERT
 create-client-data:         INSERT
                             INTO `events` (`object_class`, `object_id`, `property_name`, 
                                            `property_action`)
-                            VALUES ('client', '%d', 'client', 'creat');
+                            VALUES ('client', '%d', 'fitnessclient', 'create');
                             
 update-client-data:         INSERT
                             INTO `events` (`object_class`, `object_id`, `property_name`, 
                                            `property_action`, `property_value`)
                             VALUES ('client', '%d', '%s', 'set', '%s');
                             
-retrieve-client-data:       SELECT `property_name`, `property_action`, `property_value`, `date`
-                            FROM `events`
-                            WHERE `object_class` = 'client' AND `object_id` = '%d'
+retrieve-data-by-type-id:   SELECT `object_id`, `property_name`, `property_action`, `property_value`, `date`
+                            FROM `events` WHERE `object_class` = '%s' AND `object_id` = '%d'
                             ORDER BY `date` ASC
                             
 retrieve-all-by-type:       SELECT `object_id`, `property_name`, `property_action`, `property_value`, `date`
@@ -45,7 +44,7 @@ retrieve-p-client-tickets:  SELECT es.`object_id`, es.`property_name`, es.`prope
                                    es.`property_value`, es.`date`
                             FROM `events` es, (
                                 SELECT `object_id` FROM `events` 
-                                WHERE `object_class` = 'ticket' AND `property_name` = 'client'
+                                WHERE `object_class` = 'seasonticket' AND `property_name` = 'client'
                                     AND `property_action` = 'set' AND `property_value` = '%d' 
                             ) ids
                             WHERE ids.`object_id` = es.`object_id` 
@@ -66,7 +65,7 @@ retrieve-ticket-by-secret:  SELECT es.`object_id`, es.`property_name`, es.`prope
                             FROM `events` es, (
                                 SELECT `object_id`
                                 FROM `events`
-                                WHERE `object_class` = 'ticket' AND `property_name` = 'secret'
+                                WHERE `object_class` = 'seasonticket' AND `property_name` = 'secret'
                                     AND `property_action` = 'set' AND `property_value` = '%s'
                                 ORDER BY `date` DESC
                                 LIMIT 1
